src/terraform/infra/sg.tf
resource "aws_security_group" "sg" {
  name        = "cc-demo_ec2_sg"
  description = "allow incoming HTTP and HTTPS traffic"
  vpc_id      = aws_vpc.vpc_cc.id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "sg-ec2"
    Owner       = "code-challenge"
    Environment = "demo"
  }
}
